fix: dark mode issues

--- a/projects/components/src/card/card.component.scss
+++ b/projects/components/src/card/card.component.scss
@@ -30,7 +30,3 @@ h2 {
   object-fit: cover;
   filter: blur(3px);
 }
-
-.title {
-  z-index: 100;
-}
