--- a/projects/components/src/list-item/list-item.component.scss
+++ b/projects/components/src/list-item/list-item.component.scss
@@ -1,5 +1,5 @@
 :host {
-  background-color: white;
+  background-color: var(--md-sys-color-surface);
   border-radius: 1rem;
   padding: 1rem;
   display: grid;
@@ -17,6 +17,7 @@
   border-radius: 50%;
   background-color: #f6e2cd;
   font-weight: bold;
+  color: var(--md-ref-neutral-neutral6)
 }
 
 .star {
