--- a/projects/components/src/search-bar/search-bar.component.scss
+++ b/projects/components/src/search-bar/search-bar.component.scss
@@ -1,17 +1,19 @@
 :host {
-  background-color: white;
+  background-color: var(--md-sys-color-surface);
   border-radius: var(--md-sys-size-8);
   padding: var(--md-sys-size-4) var(--md-sys-size-7);
   display: grid;
   grid-template-columns: auto 2rem;
   gap: var(--md-sys-size-4);
   margin: 0 var(--md-sys-size-4);
+  color: var(--md-sys-color-on-surface);
 }
 
 input {
   background-color: transparent;
   border: none;
   outline: none;
+  color: inherit;
 }
 
 .avatar {
@@ -23,4 +25,5 @@ input {
   border-radius: 50%;
   background-color: #ffc383;
   font-weight: bold;
+  color: var(--md-ref-neutral-neutral6);
 }
